# linux-kernel-module-rust

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  fio.sh  lkm.lds  nvme.ini  nvme.sh  rust-toolchain.toml  x86_64-kernel.json
.cargo/: config.toml
doc/: rust_for_linux.md
domain-lib/basic/: Cargo.toml
domain-lib/basic/src/: console.rs  lib.rs  logging.rs
domain-lib/command/src/: lib.rs
domain-lib/corelib/: Cargo.toml
domain-lib/corelib/src/: bindings.rs  console.rs  domain_info.rs  lib.rs
domain-lib/corelib/src/kernel/: driver.rs  error.rs  irq.rs  mod.rs  pci.rs  radix_tree.rs  str.rs  types.rs
domain-lib/corelib/src/kernel/block/: mod.rs
domain-lib/corelib/src/kernel/block/bio/: mod.rs  vec.rs
domain-lib/corelib/src/kernel/block/mq/: converter.rs  gen_disk.rs  mod.rs  operations.rs  raw_writer.rs  request.rs  tag_set.rs
domain-lib/corelib/src/kernel/device/: mod.rs
domain-lib/corelib/src/kernel/mm/: cache_padded.rs  dma.rs  io_mem.rs  mod.rs  pages.rs
domain-lib/corelib/src/kernel/revocable/: mod.rs
domain-lib/corelib/src/kernel/sync/: mod.rs  rcu.rs  revocable.rs
domain-lib/corelib/src/kernel/sync/lock/: mod.rs  mutex.rs  spinlock.rs
domain-lib/corelib/src/kernel/time/: hrtimer.rs  mod.rs
domain-lib/domain_main/src/: lib.rs
domain-lib/interface/: Cargo.toml
domain-lib/interface/src/: empty_device.rs  lib.rs  logger.rs  null_block.rs  nvme.rs
domain-lib/ksync/: Cargo.toml
domain-lib/malloc/: Cargo.toml
domains/: domain-list.toml  domain-riscv64.ld  domain-x86_64.ld  x86_64.json
domains/.cargo/: config.toml
domains/drivers/rnull/grnull/: Cargo.toml
domains/drivers/rnull/grnull/src/: main.rs
domains/drivers/rnull/rnull/: Cargo.toml
domains/drivers/rnull/rnull/src/: block.rs  block_domain.rs  lib.rs
domains/drivers/rnvme/rnvme/: Cargo.toml
domains/drivers/rnvme/rnvme/src/: domain.rs  lib.rs  nvme_defs.rs  nvme_driver_defs.rs  nvme_mq.rs  nvme_prp.rs  nvme_queue.rs
hello-world/: .gitignore  Cargo.toml  Kbuild
hello-world/src/: lib.rs
kbind/: .gitignore  Cargo.toml  build.rs
kbind/src/: allocator.rs  bindings.rs  bindings_c.rs  bindings_helper.h  c_types.rs  chrdev.rs  error.rs  file_operations.rs  filesystem.rs  helpers.c  kernel_ptr.rs  lib.rs  logger.rs  printk.rs  random.rs  safe_ptr.rs  str.rs  sysctl.rs  time.rs  types.rs  user_ptr.rs
kernel/: Cargo.toml  build.rs
kernel/src/: bindings.rs  bindings_c.rs  bindings_helper.h  build_assert.rs  chrdev.rs  dbg.rs  devres.rs  driver.rs  error.rs  helpers.c  irq.rs  lib.rs  logger.rs  pci.rs  print.rs  radix_tree.rs  str.rs  sysctl.rs  task.rs  types.rs
kernel/src/block/: mod.rs
kernel/src/block/bio/: mod.rs  vec.rs
kernel/src/block/mq/: gen_disk.rs  mod.rs  operations.rs  raw_writer.rs  request.rs  tag_set.rs
kernel/src/buf/: kernel_ptr.rs  mod.rs  user_ptr.rs
kernel/src/device/: block.rs  mod.rs
kernel/src/fs/: address_space.rs  dentry.rs  file.rs  file_operations.rs  filesystem.rs  inode.rs  iomap.rs  mod.rs  sb.rs
kernel/src/kalloc/: allocator.rs  mod.rs
kernel/src/mm/: cache_padded.rs  dma.rs  folio.rs  io_mem.rs  mem_cache.rs  mod.rs  pages.rs  vm.rs
kernel/src/module/: mod.rs  param.rs
kernel/src/revocable/: mod.rs
kernel/src/sync/: locked_by.rs  mod.rs  per_cpu.rs  rcu.rs  revocable.rs  srcu.rs
kernel/src/sync/lock/: mod.rs  mutex.rs  spinlock.rs
kernel/src/time/: hrtimer.rs  mod.rs
kmacro/: Cargo.toml
kmacro/src/: helpers.rs  lib.rs  module.rs  vtable.rs
loader_test/: Cargo.toml  Kbuild  Makefile
loader_test/src/: lib.rs
src/: bindings.rs  chrdev.rs  file_operations.rs  filesystem.rs  printk.rs  random.rs
tcb/: Cargo.toml  Kbuild  Makefile
tcb/src/: config.rs  lib.rs  mem.rs
tcb/src/channel/: command.rs  mod.rs
tcb/src/domain/: mod.rs
tcb/src/domain_helper/: mod.rs  resource.rs  sheap.rs  syscall.rs
tcb/src/domain_loader/: creator.rs  loader.rs
tcb/src/domain_proxy/: block_device.rs  empty_device.rs  logger.rs  mod.rs  nvme_device.rs
tcb/src/kshim/: block_device.rs  entropy.rs  mod.rs  nvme.rs  one.rs
tcb/src/mem/: mod.rs  ptable.rs
testlib/src/: lib.rs
tests/chrdev/: Cargo.toml  Kbuild  Makefile
tests/chrdev-region-allocation/: Cargo.toml  Kbuild  Makefile
tests/chrdev/src/: lib.rs
tests/chrdev/tests/: tests.rs
tests/filesystem/: Cargo.toml  Kbuild  Makefile
tests/hello-world/: Cargo.toml  Kbuild  Makefile
tests/modinfo/: Cargo.toml
tests/nvme/: Cargo.toml  Kbuild  Makefile
tests/printk/: Cargo.toml
tests/random/: Cargo.toml  Kbuild  Makefile
tests/rnull/: Cargo.toml  Kbuild  Makefile
tests/rnull/src/: lib.rs
tests/rofs/: Cargo.toml  Kbuild  Makefile
tests/sync/: Cargo.toml  Kbuild  Makefile
tests/sysctl/: Cargo.toml  Kbuild  Makefile
tests/sysctl-get/: Cargo.toml
tests/utils/: Cargo.toml
user/connect/: Cargo.toml
user/dblk/: Cargo.toml
user/dlog/: Cargo.toml
user/dlog/src/: main.rs
user/dnvme/: Cargo.toml
user/domain-helper/: Cargo.toml
user/done/: Cargo.toml
user/fio/: Cargo.toml
xtask/src/: main.rs
(+65 files in other folders)
