[package]
name = "corelib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0"
interface = { path = "../interface" }
pconst = { git = "https://github.com/os-module/pconst.git", features = ["special_error"] }


kbind  = { path = "../../kbind" }
pinned-init = { version = "0.0.8", default-features = false, features = ["alloc"] }
kmacro = { path = "../../kmacro" }
log = "0.4.22"


[features]
core_impl = []