[package]
name = "chrdev"
version = "0.1.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>", "Geoffrey Thomas <geofft@ldpreload.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["kernel"]

[dependencies]
kernel = { path = "../../kernel", optional = true }

[dev-dependencies]
kernel-module-testlib = { path = "../../testlib" }
libc = "0.2.58"
