[package]
name = "rnull"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
kernel = { path = "../../kernel" }
pinned-init = { version = "0.0.8", default-features = false, features = ["alloc"]}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(MODULE)'] }