[package]
name = "dlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain-helper = { path = "../domain-helper" }
core_affinity = "0.8.1"
spin = { version = "0.9.8", features = ["ticket_mutex"] }